[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gfx/misc/the-end.png" type="Texture" id=1]
[ext_resource path="res://EndScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/rumble.ogg" type="AudioStream" id=3]
[ext_resource path="res://Factory.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mine.tscn" type="PackedScene" id=5]
[ext_resource path="res://Powerplant.tscn" type="PackedScene" id=6]
[ext_resource path="res://ToolboxTheme.tres" type="Theme" id=7]

[node name="EndScreen" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="factory" parent="sprite" instance=ExtResource( 4 )]
position = Vector2( -544.666, -53.7393 )
scale = Vector2( 2, 2 )
decorative = true

[node name="mine" parent="sprite" instance=ExtResource( 5 )]
position = Vector2( -404.985, -58.5415 )
scale = Vector2( 2, 2 )
decorative = true

[node name="powerplant" parent="sprite" instance=ExtResource( 6 )]
position = Vector2( -303.561, -65.4709 )
scale = Vector2( 2, 2 )
decorative = true

[node name="factory2" parent="sprite" instance=ExtResource( 4 )]
position = Vector2( 97.7786, -53.7393 )
scale = Vector2( 2, 2 )
decorative = true

[node name="mine2" parent="sprite" instance=ExtResource( 5 )]
position = Vector2( 281.187, -60.2233 )
scale = Vector2( 2, 2 )
decorative = true

[node name="powerplant2" parent="sprite" instance=ExtResource( 6 )]
position = Vector2( 384.292, -62.1073 )
scale = Vector2( 2, 2 )
decorative = true

[node name="Control" type="Control" parent="sprite"]
anchor_left = -0.167
anchor_top = -0.167
anchor_right = -0.167
anchor_bottom = -0.167
margin_left = -959.36
margin_top = -539.64
margin_right = 1600.64
margin_bottom = 900.36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_btn" type="Button" parent="sprite/Control"]
margin_left = 761.334
margin_top = 883.571
margin_right = 983.334
margin_bottom = 959.571
rect_scale = Vector2( 2, 2 )
focus_mode = 0
theme = ExtResource( 7 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits_btn" type="Button" parent="sprite/Control"]
margin_left = 1349.78
margin_top = 883.572
margin_right = 1571.78
margin_bottom = 959.572
rect_scale = Vector2( 2, 2 )
focus_mode = 0
theme = ExtResource( 7 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween" type="Tween" parent="."]

[node name="end_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="sprite/Control/exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="sprite/Control/credits_btn" to="." method="_on_credits_btn_pressed"]
